# opinionated-structlog-config

./: README.md  pyproject.toml
django_structlog_config/: __init__.py  celery.py  common.py
opinionated_structlog_config/: __init__.py  celery.py  common.py  django.py
