[tool.poetry]
name = "opinionated-structlog-config"
version = "0.1.0"
description = ""
authors = ["Joel Ryan <joel@iwcenter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django-structlog = "^8.0.0"

[tool.poetry.group.celery.dependencies]
celery = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
